# cmake_template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/sources/: main.cpp  output.cpp
src/app1/headers/: liblist.h  output.h
src/lib/: CMakeLists.txt
